Ajuste tildes repositorio

--- a/public/pages/3-tema.html
+++ b/public/pages/3-tema.html
@@ -63,66 +63,102 @@
                 <p>Esta es una forma textual de describir lo que sucede al interior de un sistema de información de una empresa, el cual funciona como la red de neuronas y venas del cuerpo humano, que constantemente recibe estímulos de diferente procedencia, los procesa y los convierte en una respuesta u acción</p><br />
                 <p>Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están: </p>
                 <div class="row justify-content-center mt-2">
-                    <div class="col-lg-6">
+                    <div class="col-12">
                         <div class="accordion mt-5" id="accordionExample">
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingOne">
                                     <p class="mt-3"><button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <p class="text-2 mb-2 text-center">Sistemas de procesamiento de transacciones</p>
+                                            <h3 class="text-2">Sistemas de procesamiento de transacciones</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>Los cuales procesan la información producida en la operación cotidiana de la organización, la cual es necesaria para toma de decisiones a nivel operacional y táctico. </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingTwo">
                                     <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de control de procesos de negocio</p>
+                                            <h3 class="text-2">Sistema de control de procesos de negocio</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. </div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>Permiten tener información en tiempo real del estado de la operación, específicamente en plantas industrial o de manufactura. </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingThree">
                                     <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistemas de colaboración empresarial</p>
+                                            <h3 class="text-2">Sistemas de colaboración empresarial</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. </div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>Es una de las opciones con mayor cobertura organizacional dada la posibilidad de múltiples usuarios, se puede integrar desde los proveedores hasta los clientes. </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingFour">
                                     <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistemas de información de gestión</p>
+                                            <h3 class="text-2">Sistemas de información de gestión</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseFour" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. </div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>Se enfocan en apoyar la toma de decisiones a nivel gerencial, ya que soportan la gestión de la organización, con informes estadísticos que recopilan datos de diferentes fuentes. </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingFive">
                                     <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de apoyo a la toma de decisiones</p>
+                                            <h3 class="text-2">Sistema de apoyo a la toma de decisiones</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseFive" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.</div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>Este modelo también sirve de soporte para la toma de decisiones gerenciales o directivas, especialmente cuando esta la necesidad de proyectar nuevos mercados o posibles inversiones de capital en nuevas unidades de negocio.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="card-header bg-color-4" id="headingSix">
                                     <p class="mt-3"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
-                                            <p class="mb-2 text-center" style="font-size: 20px; color: #fff">Sistema de información ejecutiva</p>
+                                            <h3 class="text-2">Sistema de información ejecutiva</h3>
                                         </button></p>
                                 </div>
                                 <div class="collapse" id="collapseSix" aria-labelledby="headingThree" data-parent="#accordionExample">
-                                    <div class="card-body bg-color-5">El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. </div>
+                                    <div class="card-body bg-color-5">
+                                        <div class="row align-items-center justify-content-center">
+                                            <div class="col-12">
+                                                <p>El cual presenta la información más relevante de la información de forma gráfica y dinámica, permitiendo conocer lo necesario para que la alta dirección tome las acciones pertinentes según la situación. </p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +190,7 @@
                 <div class="row my-4">
                     <div class="col-12 col-md-5">
                         <p>Cuando estos datos se combinan de tal manera que en conjunto dan una idea elaborada sobre aquel objeto o concepto, entonces decimos que tenemos una información: en el ejemplo anterior, esos datos ordenados y relacionados nos dan la descripción del edificio donde está el apartamento que se quiere comprar (Marco et al., 2013).</p>
-                        <p>En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyó o se mantuvo estable frente a la semana anterior.</p>
+                        <p>En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumentó, disminuyó o se mantuvo estable frente a la semana anterior.</p>
                     </div>
                     <div class="col-12 col-md-6 text-center ml-3"><img class="img-fluid" src="assets/images/pages/ilustraciones/conceptos2.png" /></div>
                 </div>
