--- a/public/media/actividad-1/index.html
+++ b/public/media/actividad-1/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <!-- Creado con Storyline 360 - http://www.articulate.com  -->
-  <!-- version: 3.40.22208.0 -->
+  <!-- version: 3.41.22450.0 -->
   <title>SENA - Actividad Did&#225;ctica 01</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, shrink-to-fit=no, minimal-ui" />
@@ -25,7 +25,7 @@
     window.isMobile.any = window.isMobile.any || window.isMobile.apple.tablet;
   </script>
 
-  <div id="focus-sink" aria-hidden="true" tabIndex=-1"></div>
+  <div id="focus-sink" aria-hidden="true" tabIndex="-1"></div>
 
   <div id="preso"></div>
   <script>
@@ -49,9 +49,9 @@
       suppressAnalytics: false,
       productChannel: 'stable',
       publishSource: 'storyline',
-      aid: 'auth0|5c0534bb2c32622dd8c8bde0',
+      aid: 'aid|9cb3149d-e02e-439b-b6eb-2a6c21cb59d5',
       cid: 'fcc8a544-0a22-48d9-8f76-940141df34c8',
-      playerVersion: '3.40.22208.0',
+      playerVersion: '3.41.22450.0',
       maxIosVideoElements: 5,
 
       
